--- a/index.html
+++ b/index.html
@@ -21,16 +21,38 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <aside>
-                <header>
-                    <!-- logo -->
-                    <!-- navbar -->
-                </header>
-                <div>
-                    <!-- playlist -->
+            <aside class="debug">
+                <div id="aside__top">
+                    <header>
+                        <div class="logo debug">
+                            <a href=""><img src="" alt=""></a>
+                        </div>
+                        <nav class="main_main">
+                            <ul>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                            </ul>
+                        </nav>
+                    </header> 
+                    <div id="playlist">
+                        <button class="add_playlist"><span>+</span>Crea playlist</button>
+                        <div id="playlist__mine">
+                            <ul id="playlist__list">
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <!-- nome utente -->
+                <div id="aside__bottom">
+                    <div id="install">
+
+                    </div>
+                    <div class="user_name">
+
+                    </div>
                 </div>
             </aside>
             <main>
