aside + main structure

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="logo debug">
                             <a href=""><img src="" alt=""></a>
                         </div>
-                        <nav class="main_main">
+                        <nav class="nav_bar">
                             <ul>
                                 <li>Lorem</li>
                                 <li>Lorem</li>
@@ -55,7 +55,53 @@
                     </div>
                 </div>
             </aside>
+
             <main>
+                <div id="main__top">
+
+                </div>
+                <div class="main__nav--wrapper">
+                    <nav class="main__nav">
+                        <ul>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                        </ul>
+                    </nav>
+                </div>
+                <section id="recent">
+                    <h2>Lorem ipsum</h2>
+                    <div class="album__wrapper">
+                        <div class="album">
+                            <img src="" alt="">
+                            <h3>Lorem</h3>
+                            <p>Lorem</p>
+                        </div>
+                        <div class="album">
+                            <img src="" alt="">
+                            <h3>Lorem</h3>
+                            <p>Lorem</p>
+                        </div>
+                        <div class="album">
+                            <img src="" alt="">
+                            <h3>Lorem</h3>
+                            <p>Lorem</p>
+                        </div>
+                        <div class="album">
+                            <img src="" alt="">
+                            <h3>Lorem</h3>
+                            <p>Lorem</p>
+                        </div>
+
+                    </div>
+
+                </section>
+                <section id="create_for">
+
+                </section>
+                <section id="popular_artist">
+
+                </section>
     
     
             </main>
