--- a/index.html
+++ b/index.html
@@ -22,18 +22,26 @@
     <div class="container">
         <div class="wrapper">
             <aside>
-                 <header>
+                <header class="">
+                    <!-- logo -->
                     <a href="#" class="logo">
                         <i class="fab fa-spotify"></i>
                         <h1>Spotify<span>&#174;</span></h1>
                     </a>
-                    <nav class="main__nav"></nav>
+                    <!-- /logo -->
+                    <!-- main__nav -->
+                    <nav class="main__nav">
                         <ul>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
+                            <li><a href=""><img src="img/aside/home.svg" alt="home"><span>Home</span></a></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="img/aside/search.svg" alt="search"><span>Search</span></a></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="img/aside/libreria.svg" alt="library"><span>Library</span></a></li>
                         </ul>
                     </nav>
+                    <!-- main__nav -->
                 </header> 
                 <!--
                 <div id="aside__bottom">
@@ -53,9 +61,9 @@
     
                         </div>
                     </div>
-                </div> 
-            </aside>
-
+                </div> -->
+            </aside> 
+<!--
             <main>
                 <div id="main__top">
 
