--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!-- main__nav -->
                     <nav class="main__nav">
                         <ul>
-                            <li><a href=""><img src="img/aside/home.svg" alt="home"><span>Home</span></a></li>
+                            <li><a href="" class="active"><img src="img/aside/home.svg" alt="home"><span>Home</span></a></li>
                         </ul>
                         <ul>
                             <li><a href=""><img src="img/aside/search.svg" alt="search"><span>Search</span></a></li>
