--- a/index.html
+++ b/index.html
@@ -47,21 +47,20 @@
                 <div id="aside__middle">
                     <h3>playlist</h3>
                     <button id="playlist__btn" class="btn aside__btn"><span>+</span>Crea Playlist</button>
-                    <nav id="playlist__mine" class="debug">
-                        <ul id="playlist__list">
-                            <li><a href="#">Nuova Playlist</a></li>
-                            <li><a href="#">Nuova Playlist</a></li>
-                            <li><a href="#">Nuova Playlist</a></li>
-                            <li><a href="#">Nuova Playlist</a></li>
-                            <li><a href="#">Nuova Playlist</a></li>
-                            <li><a href="#">Nuova Playlist</a></li>
-                            <li><a href="#">Nuova Playlist</a></li>
-                        </ul>
-                    </nav>
-                    <div class="aside__bottom">
-                        <a href=""><i class="fas fa-arrow-down"></i>Installa app</a>
-                        <button class="btn profile__btn"><img id="profile__img" src="img/aside/profile.svg" alt="">John Doe</button>
-                    </div>
+                    <ul id="playlist__list">
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                        <li><a href="#">Nuova Playlist</a></li>
+                    </ul>
+                </div>
+                <div class="aside__bottom">
+                    <a href=""><i class="fas fa-arrow-down"></i><span>Installa app</span></a>
+                    <button class="btn profile__btn"><img id="profile__img" src="img/aside/profile.svg" alt=""><span>John Doe</span></button>
                 </div>
             </aside> 
 <!--
