--- a/index.html
+++ b/index.html
@@ -68,13 +68,16 @@
                 <div id="main__top">
                     <button id="upgrade--btn" class="btn btn--bordered">effettua l'upgrade</button>
                 </div>
-
                 <div class="categories__nav--wrapper">
-                    <nav class="categories__nav">
+                    <nav class="categories__nav txt-upper">
                         <ul>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
+                            <li class="active"><a href="">in evidenza</a></li>
+                            <li><a href="#">in evidenza</a></li>
+                            <li><a href="#">podcast</a></li>
+                            <li><a href="#">classifiche</a></li>
+                            <li><a href="#">generi e mood</a></li>
+                            <li><a href="#">nuove uscite</a></li>
+                            <li><a href="#">scopri</a></li>
                         </ul>
                     </nav>
                 </div>
