--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Spotify</title>
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700&display=swap" rel="stylesheet">
     <!-- /google font -->
 
     <!-- fontawesome -->
@@ -82,10 +82,10 @@
                     </nav>
                 </div>
                 <section id="recent">
-                    <h2>Lorem ipsum</h2>
+                    <h2>Recently Played</h2>
                     <div class="album__wrapper">
                         <div class="album">
-                            <img src="" alt="">
+                            <img src="img/metal_lifting.jpg" alt="Heavy Metal">
                             <h3>Lorem</h3>
                             <p>Lorem</p>
                         </div>
@@ -104,7 +104,16 @@
                             <h3>Lorem</h3>
                             <p>Lorem</p>
                         </div>
-
+                        <div class="album">
+                            <img src="" alt="">
+                            <h3>Lorem</h3>
+                            <p>Lorem</p>
+                        </div>
+                        <div class="album">
+                            <img src="" alt="">
+                            <h3>Lorem</h3>
+                            <p>Lorem</p>
+                        </div>
                     </div>
 
                 </section>
