--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </header> 
                 
                 <div id="aside__middle">
-                    <h3>playlist</h3>
+                    <h4>playlist</h4>
                     <button id="playlist__btn" class="btn aside__btn"><span>+</span>Crea Playlist</button>
                     <ul id="playlist__list">
                         <li><a href="#">Nuova Playlist</a></li>
@@ -85,40 +85,75 @@
                     <h2>Recently Played</h2>
                     <div class="album__wrapper">
                         <div class="album">
-                            <img src="img/metal_lifting.jpg" alt="Heavy Metal">
-                            <h3>Lorem</h3>
-                            <p>Lorem</p>
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/metal_lifting.jpg" alt="HeavyMetal">
+                            </div>
+                            <h3>Heavy Metal</h3>
+                            <p class="album__sub">Subtitle</p>
                         </div>
                         <div class="album">
-                            <img src="" alt="">
-                            <h3>Lorem</h3>
-                            <p>Lorem</p>
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/stranger.jpeg" alt="Stranger Things">
+                            </div>
+                            <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                            <p class="album__sub">Kyle Dixon & Michael Stein</p>
                         </div>
                         <div class="album">
-                            <img src="" alt="">
-                            <h3>Lorem</h3>
-                            <p>Lorem</p>
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/aquietplace.jpeg" alt="A quiet place">
+                            </div>
+                            <h3>A quiet place</h3>
+                            <p class="album__sub">Subtitle</p>
                         </div>
                         <div class="album">
-                            <img src="" alt="">
-                            <h3>Lorem</h3>
-                            <p>Lorem</p>
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/split.jpeg" alt="Split">
+                            </div>
+                            <h3>Split</h3>
+                            <p class="album__sub">Subtitle</p>
                         </div>
                         <div class="album">
-                            <img src="" alt="">
-                            <h3>Lorem</h3>
-                            <p>Lorem</p>
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/cure.jpeg" alt="A cure for wellness">
+                            </div>
+                            <h3>A cure for wellness</h3>
+                            <p class="album__sub">Subtitle</p>
                         </div>
                         <div class="album">
-                            <img src="" alt="">
-                            <h3>Lorem</h3>
-                            <p>Lorem</p>
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/sinister.jpeg" alt="Sinister">
+                            </div>
+                            <h3>Sinister</h3>
+                            <p class="album__sub">Subtitle</p>
                         </div>
                     </div>
-
                 </section>
                 <section id="create_for">
-
+                    <h2>Recently Played</h2>
+                    <div class="album__wrapper">
+                        <div class="album">
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/metal_lifting.jpg" alt="HeavyMetal">
+                            </div>
+                            <h3>Heavy Metal</h3>
+                            <p class="album__sub">Subtitle</p>
+                        </div>
+                        <div class="album">
+                            <div class="album__cover">
+                                <p><i class="far fa-play-circle"></i></p>
+                                <img src="img/stranger.jpeg" alt="Stranger Things">
+                            </div>
+                            <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                            <p class="album__sub">Kyle Dixon & Michael Stein</p>
+                        </div>
+                    </div>
                 </section>
                 <section id="popular_artist">
 
