--- a/index.html
+++ b/index.html
@@ -86,72 +86,73 @@
                     <div class="album__wrapper">
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
                                 <img src="img/metal_lifting.jpg" alt="HeavyMetal">
                             </div>
                             <h3>Heavy Metal</h3>
-                            <p class="album__sub">Subtitle</p>
+                            <p>Subtitle</p>
                         </div>
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
                                 <img src="img/stranger.jpeg" alt="Stranger Things">
                             </div>
                             <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
-                            <p class="album__sub">Kyle Dixon & Michael Stein</p>
+                            <p>Kyle Dixon & Michael Stein</p>
                         </div>
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
                                 <img src="img/aquietplace.jpeg" alt="A quiet place">
                             </div>
                             <h3>A quiet place</h3>
-                            <p class="album__sub">Subtitle</p>
+                            <p>Subtitle</p>
                         </div>
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
                                 <img src="img/split.jpeg" alt="Split">
                             </div>
                             <h3>Split</h3>
-                            <p class="album__sub">Subtitle</p>
+                            <p>Subtitle</p>
                         </div>
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
                                 <img src="img/cure.jpeg" alt="A cure for wellness">
                             </div>
                             <h3>A cure for wellness</h3>
-                            <p class="album__sub">Subtitle</p>
+                            <p>Subtitle</p>
                         </div>
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
                                 <img src="img/sinister.jpeg" alt="Sinister">
                             </div>
                             <h3>Sinister</h3>
-                            <p class="album__sub">Subtitle</p>
+                            <p>Subtitle</p>
                         </div>
                     </div>
                 </section>
                 <section id="create_for">
-                    <h2>Recently Played</h2>
+                    <h2>Creato per John Doe</h2>
+                    <h5>Più ascolti, più accurati saranno i nostri suggerimenti.</h5>
                     <div class="album__wrapper">
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
-                                <img src="img/metal_lifting.jpg" alt="HeavyMetal">
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
+                                <img src="img/radar.jpeg" alt="Your Release Radar">
                             </div>
-                            <h3>Heavy Metal</h3>
-                            <p class="album__sub">Subtitle</p>
+                            <h3>Release</h3>
+                            <p>Subtitle</p>
                         </div>
                         <div class="album">
                             <div class="album__cover">
-                                <p><i class="far fa-play-circle"></i></p>
-                                <img src="img/stranger.jpeg" alt="Stranger Things">
+                                <p class="album__play"><i class="far fa-play-circle"></i></p>
+                                <img src="img/mixdaily.jpeg" alt="Your Daily Mix">
                             </div>
-                            <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
-                            <p class="album__sub">Kyle Dixon & Michael Stein</p>
+                            <h3>Daily Mix 1</h3>
+                            <p>Subtitle</p>
                         </div>
                     </div>
                 </section>
