--- a/index.html
+++ b/index.html
@@ -183,6 +183,25 @@
         </div>
        
         <footer>
+            <div class="footer__left">
+                <img class="footer__album__cover" src="img/sinister.jpeg" alt="">
+                <div class="footer__album__heading">
+                    <h6>Sinister</h6>
+                    <a class="footer__album__name opacity06-1" href="#">Brano Nome</a>
+                </div>
+                <div class="footer__btns__wrapper--left">
+                    <button class="btn footer__album__btn opacity06-1"><i class="far fa-heart "></i></button>
+                    <button class="btn footer__album__btn opacity06-1"><i class="far fa-folder"></i></button>
+                </div>
+            </div>
+            <div class="footer__center">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque quaerat vero consectetur, similique aliquid debitis dolore error.</p>
+
+            </div>
+            <div class="footer__right">
+                <p>Lorem</p>
+
+            </div>
 
         </footer>
     </div>
