--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <a class="footer__album__name opacity06-1" href="#">Brano Nome</a>
                 </div>
                 <div class="footer__btns__wrapper--left">
-                    <button class="btn footer__album__btn opacity06-1"><i class="far fa-heart "></i></button>
+                    <button class="btn footer__album__btn opacity06-1"><i class="far fa-heart"></i></button>
                     <button class="btn footer__album__btn opacity06-1"><i class="far fa-folder"></i></button>
                 </div>
             </div>
@@ -199,13 +199,11 @@
 
             </div>
             <div class="footer__right">
-                <p>Lorem</p>
-
+                <button class="btn footer__right__btn"><i class="fas fa-list-ul"></i></button>
+                <button class="btn footer__right__btn"><i class="fas fa-desktop"></i></button>
+                <p><i class="fas fa-volume-up footer__album__btn"></i><span class="volume"></span></p>
             </div>
-
         </footer>
-    </div>
-  
-    
+    </div> 
 </body>
 </html>
