--- a/index.html
+++ b/index.html
@@ -195,13 +195,19 @@
                 </div>
             </div>
             <div class="footer__center">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque quaerat vero consectetur, similique aliquid debitis dolore error.</p>
-
+                <div class="footer__btns__wrapper--center">
+                    <button class="btn footer__btn"><i class="fas fa-random"></i></button>
+                    <button class="btn footer__btn"><i class="fas fa-step-backward"></i></button>
+                    <button class="btn btn--big footer__btn"><i class="far fa-play-circle"></i></button>
+                    <button class="btn footer__btn"><i class="fas fa-step-forward"></i></button>
+                    <button class="btn footer__btn"><i class="fas fa-redo-alt"></i></button>    
+                </div>
+                <p class="bars__wrapper">1:25<span class="bars"></span>4:30</p>
             </div>
             <div class="footer__right">
-                <button class="btn footer__right__btn"><i class="fas fa-list-ul"></i></button>
-                <button class="btn footer__right__btn"><i class="fas fa-desktop"></i></button>
-                <p><i class="fas fa-volume-up footer__album__btn"></i><span class="volume"></span></p>
+                <button class="btn footer__btn"><i class="fas fa-list-ul"></i></button>
+                <button class="btn footer__btn"><i class="fas fa-desktop"></i></button>
+                <p class="bars__wrapper"><i class="fas fa-volume-up footer__album__btn"></i><span class="bars"></span></p>
             </div>
         </footer>
     </div> 
